--- a/.eslintrc
+++ b/.eslintrc
@@ -1,21 +1,9 @@
-/* eslint-disable linebreak-style */
-module.exports = {
-  env: {
-    browser: true,
-    commonjs: true,
-    es2021: true,
-  },
-  extends: [
-    'airbnb-base',
-  ],
-  overrides: [],
-  parserOptions: {
-    ecmaVersion: 'latest',
-  },
-  plugins: [
-    'react',
-  ],
-  rules: {
-    'no-underscore-dangle': ['error', { allow: ['_id'] }],
-  },
-};
+{
+  "extends": "airbnb-base",
+  "rules": {
+    "no-underscore-dangle": [
+      "error",
+      { "allow": ["_id"] }
+    ]
+  }
+}
